Add more support for less
* Import bootstrap in client less file
* Add client side less.js for development
* Fix up minifying and uglifying paths

--- a/app/client/components/client.less
+++ b/app/client/components/client.less
@@ -1,3 +1,6 @@
+@import "vendor/bootstrap/less/bootstrap";
+@icon-font-path: "/components/vendor/bootstrap/fonts/";
+
 body {
   padding-top: 70px;
 }
