Start some shitty styling so its not so awful
* Have some rudimentary tracklisting styles
* Navbar (top and bottom) float and have appropriate controls
* Currently way too dark
* Currently way too many lines
* Somebody more skilled than I will need to take a crack at this in the
future...

--- a/app/client/components/player.html
+++ b/app/client/components/player.html
@@ -1,9 +1,4 @@
-<div style="margin-top: 10px;">
-    <div class="song-details">
-        {{player.media.artist}} - {{player.media.title}}
-        {{player.media.album}} ({{player.media.year}})
-    </div>
-
+<div>
     <div class="btn-group">
         <button class="btn btn-default {{size}}">
             <span class="glyphicon glyphicon-backward" ng-click="player.prev()"></span>
