--- a/app/client/components/debug.html
+++ b/app/client/components/debug.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-fixed-bottom">
+<div class="navbar navbar-fixed-bottom debug">
     <table class="table">
         <thead>
         <tr>
