WIP visualiser directive
* Takes in a callback to grab an array of frequency data
* Its broken right now due to frequency and fft scaling issues
* May consider just passing in an analyser node completely so that it
can query the fft,, min and max decibels and scale itself accordingly
* Using canvas currently, but this should be fully pluggable

--- a/app/client/components/player.html
+++ b/app/client/components/player.html
@@ -19,5 +19,6 @@
 
             <toggle-button size="{{size}}" notify="player.starToggle()" state="player.media.starred" off="glyphicon-star-empty" on="glyphicon-star"></toggle-button>
         </div>
+        <visualizer data="player.audioOutput.getVisualisationData()"></visualizer>
     </div>
 </div>
