Working resizing visualiser for current track
* Scale canvas to fill parent
* Draw a bar for each frequency range, updating on requestAnimationFrame
* Will need to fix z-index and such later
* In the end it wont be behind everything, definitely need some design
help here

--- a/app/client/components/client.less
+++ b/app/client/components/client.less
@@ -2,6 +2,7 @@
 @import "variables";
 @import "player";
 @import "tracklist";
+@import "visualiser";
 
 body {
   color: @text;
@@ -20,9 +21,9 @@ body {
 }
 
 .t {
-  border: 1px dotted red;
+  border: 1px solid blue;
 }
 
 .f {
-  border: 1px dashed red;
+  border: 1px solid green;
 }
